codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__navigation_reconnect__reconnected_unavailable_conversation.snap
---
source: tui/src/app/tests/navigation_reconnect_tests.rs
expression: "format!(\"{content}\\n{}\", render_bottom_popup(&app.chat_widget, 80))"
---
Cached previous conversation
 
• This conversation is unavailable. Its cached transcript and draft remain here; input is paused. Open the agent picker or return to the parent to continue.
• The rename target disappeared. Unsubmitted title: Keep this task draft!
› latest draft

  gpt-test default · /tmp/project
